# Kepler-Vision

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  e2e.yml
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/web/e2e/: auth.spec.ts
apps/web/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/home/: client.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/sign-in/: page.tsx
apps/web/src/app/(auth)/sign-up/: page.tsx
apps/web/src/components/: theme-applier.tsx
apps/web/src/components/auth/: auth-gate.tsx
apps/web/src/components/forms/: sign-in-form.tsx  sign-up-form.tsx
apps/web/src/components/navigation/: app-shell.tsx  appearance-menu.tsx  left-rail.tsx  top-bar.tsx
apps/web/src/components/ui/: alert.tsx  button.tsx  card.tsx  index.ts  input.tsx  label.tsx  toaster.tsx
apps/web/src/lib/: cn.test.ts  cn.ts  errors.ts  format.test.ts  format.ts  index.ts
apps/web/src/lib/api/: auth-client.ts  auth.ts  client.ts  index.ts  types.ts
apps/web/src/lib/auth/: hooks.ts
apps/web/src/stores/: ui.ts
apps/web/src/styles/: globals.css
deploy/triton/models/change_det_s2/: config.pbtxt
deploy/triton/models/cloud_mask_s2/: config.pbtxt
deploy/triton/models/land_cover_s2/: config.pbtxt
deploy/triton/models/ship_detect_s2/: config.pbtxt
deploy/triton/models/vegetation_s2/: config.pbtxt
deploy/triton/models/water_s2/: config.pbtxt
plans/: kepler-engineering-audit.md
scripts/: check_ci.py  ci.sh  dev-up.sh
services/api/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/api/api/: index.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_init.py  0002_timeouts_and_tuning.py
services/api/src/kepler/: __init__.py  main.py  settings.py
services/api/src/kepler/api/: __init__.py  deps.py  rate_limit.py  router.py
services/api/src/kepler/api/v1/: api_keys.py  auth.py  users.py  workspaces.py
services/api/src/kepler/application/: __init__.py
services/api/src/kepler/application/identity/: __init__.py  commands.py  queries.py
services/api/src/kepler/core/: __init__.py  errors.py  ids.py  logging.py  pagination.py  telemetry.py  time.py
services/api/src/kepler/core/middleware/: access_log.py  csp.py  error_handler.py  request_id.py  security_headers.py
services/api/src/kepler/core/security/: __init__.py  jwt.py  password.py
services/api/src/kepler/domain/identity/: __init__.py  entities.py  events.py  permissions.py  services.py  value_objects.py
services/api/src/kepler/infra/: __init__.py
services/api/src/kepler/infra/cache/: __init__.py  redis.py  refresh_store.py
services/api/src/kepler/infra/db/: __init__.py  base.py  mappers.py  models.py  session.py  uow.py
services/api/src/kepler/infra/db/repositories/: __init__.py  api_key_repo.py  audit_repo.py  membership_repo.py  refresh_token_repo.py  tenant_repo.py  user_repo.py
services/api/tests/: __init__.py  conftest.py
services/api/tests/integration/: __init__.py  test_auth.py  test_contracts.py  test_db_constraints.py
services/api/tests/smoke/: test_app.py
services/api/tests/unit/: __init__.py  test_identity_domain.py  test_jwt.py  test_password.py
services/ml/: README.md  pyproject.toml
services/ml/src/kepler_ml/: __init__.py  cli.py  domain.py  settings.py
services/ml/src/kepler_ml/datasets/: __init__.py  augmented_dataset.py  stac_mixer.py  tile_dataset.py
services/ml/src/kepler_ml/eval/: __init__.py  metrics.py  runner.py
services/ml/src/kepler_ml/explain/: __init__.py  evidence.py  saliency.py
services/ml/src/kepler_ml/export/: __init__.py
services/ml/src/kepler_ml/models/: __init__.py  factory.py  heads.py
services/ml/src/kepler_ml/postprocess/: __init__.py  vectorize.py
services/ml/src/kepler_ml/preprocess/: __init__.py  augmentation.py  cloud_mask.py  normalization.py  tiling.py
services/ml/src/kepler_ml/registry/: __init__.py  registry.py  triton_config.py
services/ml/src/kepler_ml/serving/: __init__.py  pipeline.py  triton_client.py
services/ml/src/kepler_ml/training/: __init__.py  trainer.py
services/ml/tests/: __init__.py
services/ml/tests/unit/: __init__.py  test_explain.py  test_export.py  test_metrics.py  test_registry.py  test_tiling.py  test_triton_config.py
